--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 cookiecutter==2.6.0
+dj-database-url==2.2.0
 Django==5.1.1
 django-browser-reload==1.15.0
 django-phonenumber-field==8.0.0
 django-tailwind==3.8.0
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 Jinja2==3.1.4
@@ -21,6 +23,7 @@ mysql-connector-python==9.0.0
 mysqlclient==2.2.4
 packaging==24.1
 phonenumberslite==8.13.45
+psycopg2-binary==2.9.10
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
