--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 arrow==1.3.0
 asgiref==3.8.1
 binaryornot==0.4.4
+Brotli==1.1.0
 certifi==2024.8.30
 chardet==5.2.0
 charset-normalizer==3.3.2
@@ -37,3 +38,4 @@ types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.3
+whitenoise==6.7.0
