--- a/requirements.txt
+++ b/requirements.txt
@@ -38,4 +38,5 @@ types-python-dateutil==2.9.0.20240906
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.3
+uvicorn==0.32.0
 whitenoise==6.7.0
